[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "benchmarks"
path = "lib.rs"
bench = true
harness = false

[dependencies]
std_ownership = { path = "../core/" }
std_ownership_api = { path = "../api/"}
criterion = "0.4"
plotters = "0.3.3"
libc = "0.2"

[profile.bench]
debug = true
