[package]
name = "filebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ownership-demo"
path = "src/owership.rs"

[dependencies]
redbpf = { version = "2.3.0", features = ["load"] }
tokio = { version = "1.0", features = ["rt", "signal", "time", "io-util", "net", "sync"] }
tracing-subscriber = "0.2"
tracing = "0.1"
futures = "0.3"

probes = { path = "./probes", package = "probes"}