[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
std_ownership_api = { path = "../api/" }
std_ownership ={ path = "../core/"}

[[example]]
name = "ownership"
path = "main.rs"

# [profile.release]
# debug = true
# opt-level = 3
# panic = "abort"
# overflow-checks = false